Code/syntax.output
Grammar

    0 $accept: Program $end

    1 Program: ExtDefList

    2 ExtDefList: %empty
    3           | ExtDef ExtDefList

    4 ExtDef: Specifier ExtDecList SEMI
    5       | Specifier SEMI
    6       | Specifier FunDec CompSt
    7       | Specifier ExtDecList error SEMI
    8       | Specifier error SEMI

    9 ExtDecList: VarDec
   10           | VarDec COMMA ExtDecList

   11 Specifier: TYPE
   12          | StructSpecifier

   13 StructSpecifier: STRUCT OptTag LC DefList RC
   14                | STRUCT Tag
   15                | STRUCT OptTag LC DefList error RC

   16 OptTag: ID
   17       | %empty

   18 Tag: ID

   19 VarDec: ID
   20       | VarDec LB INT RB
   21       | VarDec LB INT error RB

   22 FunDec: ID LP VarList RP
   23       | ID LP RP
   24       | ID LP VarList error RP

   25 VarList: ParamDec COMMA VarList
   26        | ParamDec

   27 ParamDec: Specifier VarDec

   28 CompSt: LC DefList StmtList RC
   29       | LC DefList StmtList error RC

   30 StmtList: Stmt StmtList
   31         | %empty

   32 Stmt: Exp SEMI
   33     | CompSt
   34     | RETURN Exp SEMI
   35     | IF LP Exp RP Stmt
   36     | IF LP Exp RP Stmt ELSE Stmt
   37     | WHILE LP Exp RP Stmt
   38     | Exp error SEMI
   39     | RETURN Exp error SEMI
   40     | IF LP Exp error RP Stmt
   41     | WHILE LP Exp error RP Stmt

   42 DefList: Def DefList
   43        | %empty

   44 Def: Specifier DecList SEMI
   45    | Specifier DecList error SEMI

   46 DecList: Dec
   47        | Dec COMMA DecList

   48 Dec: VarDec
   49    | VarDec ASSIGNOP Exp

   50 Exp: Exp ASSIGNOP Exp
   51    | Exp AND Exp
   52    | Exp OR Exp
   53    | Exp RELOP Exp
   54    | Exp PLUS Exp
   55    | Exp MINUS Exp
   56    | Exp STAR Exp
   57    | Exp DIV Exp
   58    | LP Exp RP
   59    | MINUS Exp
   60    | NOT Exp
   61    | ID LP Args RP
   62    | ID LP RP
   63    | Exp LB Exp RB
   64    | Exp DOT ID
   65    | ID
   66    | INT
   67    | FLOAT
   68    | LP Exp error RP
   69    | ID LP Args error RP
   70    | ID LP error RP
   71    | Exp LB Exp error RB

   72 Args: Exp COMMA Args
   73     | Exp


Terminals, with rules where they appear

$end (0) 0
error (256) 7 8 15 21 24 29 38 39 40 41 45 68 69 70 71
INT (258) 20 21 66
FLOAT (259) 67
ID (260) 16 18 19 22 23 24 61 62 64 65 69 70
SEMI (261) 4 5 7 8 32 34 38 39 44 45
COMMA (262) 10 25 47 72
ASSIGNOP (263) 49 50
RELOP (264) 53
PLUS (265) 54
MINUS (266) 55 59
STAR (267) 56
DIV (268) 57
AND (269) 51
OR (270) 52
DOT (271) 64
NOT (272) 60
TYPE (273) 11
LP (274) 22 23 24 35 36 37 40 41 58 61 62 68 69 70
RP (275) 22 23 24 35 36 37 40 41 58 61 62 68 69 70
LB (276) 20 21 63 71
RB (277) 20 21 63 71
LC (278) 13 15 28 29
RC (279) 13 15 28 29
STRUCT (280) 13 14 15
RETURN (281) 34 39
IF (282) 35 36 40
ELSE (283) 36
WHILE (284) 37 41
LOWER_THAN_ELSE (285)


Nonterminals, with rules where they appear

$accept (31)
    on left: 0
Program (32)
    on left: 1, on right: 0
ExtDefList (33)
    on left: 2 3, on right: 1 3
ExtDef (34)
    on left: 4 5 6 7 8, on right: 3
ExtDecList (35)
    on left: 9 10, on right: 4 7 10
Specifier (36)
    on left: 11 12, on right: 4 5 6 7 8 27 44 45
StructSpecifier (37)
    on left: 13 14 15, on right: 12
OptTag (38)
    on left: 16 17, on right: 13 15
Tag (39)
    on left: 18, on right: 14
VarDec (40)
    on left: 19 20 21, on right: 9 10 20 21 27 48 49
FunDec (41)
    on left: 22 23 24, on right: 6
VarList (42)
    on left: 25 26, on right: 22 24 25
ParamDec (43)
    on left: 27, on right: 25 26
CompSt (44)
    on left: 28 29, on right: 6 33
StmtList (45)
    on left: 30 31, on right: 28 29 30
Stmt (46)
    on left: 32 33 34 35 36 37 38 39 40 41, on right: 30 35 36 37 40
    41
DefList (47)
    on left: 42 43, on right: 13 15 28 29 42
Def (48)
    on left: 44 45, on right: 42
DecList (49)
    on left: 46 47, on right: 44 45 47
Dec (50)
    on left: 48 49, on right: 46 47
Exp (51)
    on left: 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67
    68 69 70 71, on right: 32 34 35 36 37 38 39 40 41 49 50 51 52 53
    54 55 56 57 58 59 60 63 64 68 71 72 73
Args (52)
    on left: 72 73, on right: 61 69 72


State 0

    0 $accept: . Program $end

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 2 (ExtDefList)

    Program          go to state 3
    ExtDefList       go to state 4
    ExtDef           go to state 5
    Specifier        go to state 6
    StructSpecifier  go to state 7


State 1

   11 Specifier: TYPE .

    $default  reduce using rule 11 (Specifier)


State 2

   13 StructSpecifier: STRUCT . OptTag LC DefList RC
   14                | STRUCT . Tag
   15                | STRUCT . OptTag LC DefList error RC

    ID  shift, and go to state 8

    $default  reduce using rule 17 (OptTag)

    OptTag  go to state 9
    Tag     go to state 10


State 3

    0 $accept: Program . $end

    $end  shift, and go to state 11


State 4

    1 Program: ExtDefList .

    $default  reduce using rule 1 (Program)


State 5

    3 ExtDefList: ExtDef . ExtDefList

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 2 (ExtDefList)

    ExtDefList       go to state 12
    ExtDef           go to state 5
    Specifier        go to state 6
    StructSpecifier  go to state 7


State 6

    4 ExtDef: Specifier . ExtDecList SEMI
    5       | Specifier . SEMI
    6       | Specifier . FunDec CompSt
    7       | Specifier . ExtDecList error SEMI
    8       | Specifier . error SEMI

    error  shift, and go to state 13
    ID     shift, and go to state 14
    SEMI   shift, and go to state 15

    ExtDecList  go to state 16
    VarDec      go to state 17
    FunDec      go to state 18


State 7

   12 Specifier: StructSpecifier .

    $default  reduce using rule 12 (Specifier)


State 8

   16 OptTag: ID .
   18 Tag: ID .

    LC        reduce using rule 16 (OptTag)
    $default  reduce using rule 18 (Tag)


State 9

   13 StructSpecifier: STRUCT OptTag . LC DefList RC
   15                | STRUCT OptTag . LC DefList error RC

    LC  shift, and go to state 19


State 10

   14 StructSpecifier: STRUCT Tag .

    $default  reduce using rule 14 (StructSpecifier)


State 11

    0 $accept: Program $end .

    $default  accept


State 12

    3 ExtDefList: ExtDef ExtDefList .

    $default  reduce using rule 3 (ExtDefList)


State 13

    8 ExtDef: Specifier error . SEMI

    SEMI  shift, and go to state 20


State 14

   19 VarDec: ID .
   22 FunDec: ID . LP VarList RP
   23       | ID . LP RP
   24       | ID . LP VarList error RP

    LP  shift, and go to state 21

    $default  reduce using rule 19 (VarDec)


State 15

    5 ExtDef: Specifier SEMI .

    $default  reduce using rule 5 (ExtDef)


State 16

    4 ExtDef: Specifier ExtDecList . SEMI
    7       | Specifier ExtDecList . error SEMI

    error  shift, and go to state 22
    SEMI   shift, and go to state 23


State 17

    9 ExtDecList: VarDec .
   10           | VarDec . COMMA ExtDecList
   20 VarDec: VarDec . LB INT RB
   21       | VarDec . LB INT error RB

    COMMA  shift, and go to state 24
    LB     shift, and go to state 25

    $default  reduce using rule 9 (ExtDecList)


State 18

    6 ExtDef: Specifier FunDec . CompSt

    LC  shift, and go to state 26

    CompSt  go to state 27


State 19

   13 StructSpecifier: STRUCT OptTag LC . DefList RC
   15                | STRUCT OptTag LC . DefList error RC

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 43 (DefList)

    Specifier        go to state 28
    StructSpecifier  go to state 7
    DefList          go to state 29
    Def              go to state 30


State 20

    8 ExtDef: Specifier error SEMI .

    $default  reduce using rule 8 (ExtDef)


State 21

   22 FunDec: ID LP . VarList RP
   23       | ID LP . RP
   24       | ID LP . VarList error RP

    TYPE    shift, and go to state 1
    RP      shift, and go to state 31
    STRUCT  shift, and go to state 2

    Specifier        go to state 32
    StructSpecifier  go to state 7
    VarList          go to state 33
    ParamDec         go to state 34


State 22

    7 ExtDef: Specifier ExtDecList error . SEMI

    SEMI  shift, and go to state 35


State 23

    4 ExtDef: Specifier ExtDecList SEMI .

    $default  reduce using rule 4 (ExtDef)


State 24

   10 ExtDecList: VarDec COMMA . ExtDecList

    ID  shift, and go to state 36

    ExtDecList  go to state 37
    VarDec      go to state 17


State 25

   20 VarDec: VarDec LB . INT RB
   21       | VarDec LB . INT error RB

    INT  shift, and go to state 38


State 26

   28 CompSt: LC . DefList StmtList RC
   29       | LC . DefList StmtList error RC

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 43 (DefList)

    Specifier        go to state 28
    StructSpecifier  go to state 7
    DefList          go to state 39
    Def              go to state 30


State 27

    6 ExtDef: Specifier FunDec CompSt .

    $default  reduce using rule 6 (ExtDef)


State 28

   44 Def: Specifier . DecList SEMI
   45    | Specifier . DecList error SEMI

    ID  shift, and go to state 36

    VarDec   go to state 40
    DecList  go to state 41
    Dec      go to state 42


State 29

   13 StructSpecifier: STRUCT OptTag LC DefList . RC
   15                | STRUCT OptTag LC DefList . error RC

    error  shift, and go to state 43
    RC     shift, and go to state 44


State 30

   42 DefList: Def . DefList

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 43 (DefList)

    Specifier        go to state 28
    StructSpecifier  go to state 7
    DefList          go to state 45
    Def              go to state 30


State 31

   23 FunDec: ID LP RP .

    $default  reduce using rule 23 (FunDec)


State 32

   27 ParamDec: Specifier . VarDec

    ID  shift, and go to state 36

    VarDec  go to state 46


State 33

   22 FunDec: ID LP VarList . RP
   24       | ID LP VarList . error RP

    error  shift, and go to state 47
    RP     shift, and go to state 48


State 34

   25 VarList: ParamDec . COMMA VarList
   26        | ParamDec .

    COMMA  shift, and go to state 49

    $default  reduce using rule 26 (VarList)


State 35

    7 ExtDef: Specifier ExtDecList error SEMI .

    $default  reduce using rule 7 (ExtDef)


State 36

   19 VarDec: ID .

    $default  reduce using rule 19 (VarDec)


State 37

   10 ExtDecList: VarDec COMMA ExtDecList .

    $default  reduce using rule 10 (ExtDecList)


State 38

   20 VarDec: VarDec LB INT . RB
   21       | VarDec LB INT . error RB

    error  shift, and go to state 50
    RB     shift, and go to state 51


State 39

   28 CompSt: LC DefList . StmtList RC
   29       | LC DefList . StmtList error RC

    INT     shift, and go to state 52
    FLOAT   shift, and go to state 53
    ID      shift, and go to state 54
    MINUS   shift, and go to state 55
    NOT     shift, and go to state 56
    LP      shift, and go to state 57
    LC      shift, and go to state 26
    RETURN  shift, and go to state 58
    IF      shift, and go to state 59
    WHILE   shift, and go to state 60

    $default  reduce using rule 31 (StmtList)

    CompSt    go to state 61
    StmtList  go to state 62
    Stmt      go to state 63
    Exp       go to state 64


State 40

   20 VarDec: VarDec . LB INT RB
   21       | VarDec . LB INT error RB
   48 Dec: VarDec .
   49    | VarDec . ASSIGNOP Exp

    ASSIGNOP  shift, and go to state 65
    LB        shift, and go to state 25

    $default  reduce using rule 48 (Dec)


State 41

   44 Def: Specifier DecList . SEMI
   45    | Specifier DecList . error SEMI

    error  shift, and go to state 66
    SEMI   shift, and go to state 67


State 42

   46 DecList: Dec .
   47        | Dec . COMMA DecList

    COMMA  shift, and go to state 68

    $default  reduce using rule 46 (DecList)


State 43

   15 StructSpecifier: STRUCT OptTag LC DefList error . RC

    RC  shift, and go to state 69


State 44

   13 StructSpecifier: STRUCT OptTag LC DefList RC .

    $default  reduce using rule 13 (StructSpecifier)


State 45

   42 DefList: Def DefList .

    $default  reduce using rule 42 (DefList)


State 46

   20 VarDec: VarDec . LB INT RB
   21       | VarDec . LB INT error RB
   27 ParamDec: Specifier VarDec .

    LB  shift, and go to state 25

    $default  reduce using rule 27 (ParamDec)


State 47

   24 FunDec: ID LP VarList error . RP

    RP  shift, and go to state 70


State 48

   22 FunDec: ID LP VarList RP .

    $default  reduce using rule 22 (FunDec)


State 49

   25 VarList: ParamDec COMMA . VarList

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    Specifier        go to state 32
    StructSpecifier  go to state 7
    VarList          go to state 71
    ParamDec         go to state 34


State 50

   21 VarDec: VarDec LB INT error . RB

    RB  shift, and go to state 72


State 51

   20 VarDec: VarDec LB INT RB .

    $default  reduce using rule 20 (VarDec)


State 52

   66 Exp: INT .

    $default  reduce using rule 66 (Exp)


State 53

   67 Exp: FLOAT .

    $default  reduce using rule 67 (Exp)


State 54

   61 Exp: ID . LP Args RP
   62    | ID . LP RP
   65    | ID .
   69    | ID . LP Args error RP
   70    | ID . LP error RP

    LP  shift, and go to state 73

    $default  reduce using rule 65 (Exp)


State 55

   59 Exp: MINUS . Exp

    INT    shift, and go to state 52
    FLOAT  shift, and go to state 53
    ID     shift, and go to state 54
    MINUS  shift, and go to state 55
    NOT    shift, and go to state 56
    LP     shift, and go to state 57

    Exp  go to state 74


State 56

   60 Exp: NOT . Exp

    INT    shift, and go to state 52
    FLOAT  shift, and go to state 53
    ID     shift, and go to state 54
    MINUS  shift, and go to state 55
    NOT    shift, and go to state 56
    LP     shift, and go to state 57

    Exp  go to state 75


State 57

   58 Exp: LP . Exp RP
   68    | LP . Exp error RP

    INT    shift, and go to state 52
    FLOAT  shift, and go to state 53
    ID     shift, and go to state 54
    MINUS  shift, and go to state 55
    NOT    shift, and go to state 56
    LP     shift, and go to state 57

    Exp  go to state 76


State 58

   34 Stmt: RETURN . Exp SEMI
   39     | RETURN . Exp error SEMI

    INT    shift, and go to state 52
    FLOAT  shift, and go to state 53
    ID     shift, and go to state 54
    MINUS  shift, and go to state 55
    NOT    shift, and go to state 56
    LP     shift, and go to state 57

    Exp  go to state 77


State 59

   35 Stmt: IF . LP Exp RP Stmt
   36     | IF . LP Exp RP Stmt ELSE Stmt
   40     | IF . LP Exp error RP Stmt

    LP  shift, and go to state 78


State 60

   37 Stmt: WHILE . LP Exp RP Stmt
   41     | WHILE . LP Exp error RP Stmt

    LP  shift, and go to state 79


State 61

   33 Stmt: CompSt .

    $default  reduce using rule 33 (Stmt)


State 62

   28 CompSt: LC DefList StmtList . RC
   29       | LC DefList StmtList . error RC

    error  shift, and go to state 80
    RC     shift, and go to state 81


State 63

   30 StmtList: Stmt . StmtList

    INT     shift, and go to state 52
    FLOAT   shift, and go to state 53
    ID      shift, and go to state 54
    MINUS   shift, and go to state 55
    NOT     shift, and go to state 56
    LP      shift, and go to state 57
    LC      shift, and go to state 26
    RETURN  shift, and go to state 58
    IF      shift, and go to state 59
    WHILE   shift, and go to state 60

    $default  reduce using rule 31 (StmtList)

    CompSt    go to state 61
    StmtList  go to state 82
    Stmt      go to state 63
    Exp       go to state 64


State 64

   32 Stmt: Exp . SEMI
   38     | Exp . error SEMI
   50 Exp: Exp . ASSIGNOP Exp
   51    | Exp . AND Exp
   52    | Exp . OR Exp
   53    | Exp . RELOP Exp
   54    | Exp . PLUS Exp
   55    | Exp . MINUS Exp
   56    | Exp . STAR Exp
   57    | Exp . DIV Exp
   63    | Exp . LB Exp RB
   64    | Exp . DOT ID
   71    | Exp . LB Exp error RB

    error     shift, and go to state 83
    SEMI      shift, and go to state 84
    ASSIGNOP  shift, and go to state 85
    RELOP     shift, and go to state 86
    PLUS      shift, and go to state 87
    MINUS     shift, and go to state 88
    STAR      shift, and go to state 89
    DIV       shift, and go to state 90
    AND       shift, and go to state 91
    OR        shift, and go to state 92
    DOT       shift, and go to state 93
    LB        shift, and go to state 94


State 65

   49 Dec: VarDec ASSIGNOP . Exp

    INT    shift, and go to state 52
    FLOAT  shift, and go to state 53
    ID     shift, and go to state 54
    MINUS  shift, and go to state 55
    NOT    shift, and go to state 56
    LP     shift, and go to state 57

    Exp  go to state 95


State 66

   45 Def: Specifier DecList error . SEMI

    SEMI  shift, and go to state 96


State 67

   44 Def: Specifier DecList SEMI .

    $default  reduce using rule 44 (Def)


State 68

   47 DecList: Dec COMMA . DecList

    ID  shift, and go to state 36

    VarDec   go to state 40
    DecList  go to state 97
    Dec      go to state 42


State 69

   15 StructSpecifier: STRUCT OptTag LC DefList error RC .

    $default  reduce using rule 15 (StructSpecifier)


State 70

   24 FunDec: ID LP VarList error RP .

    $default  reduce using rule 24 (FunDec)


State 71

   25 VarList: ParamDec COMMA VarList .

    $default  reduce using rule 25 (VarList)


State 72

   21 VarDec: VarDec LB INT error RB .

    $default  reduce using rule 21 (VarDec)


State 73

   61 Exp: ID LP . Args RP
   62    | ID LP . RP
   69    | ID LP . Args error RP
   70    | ID LP . error RP

    error  shift, and go to state 98
    INT    shift, and go to state 52
    FLOAT  shift, and go to state 53
    ID     shift, and go to state 54
    MINUS  shift, and go to state 55
    NOT    shift, and go to state 56
    LP     shift, and go to state 57
    RP     shift, and go to state 99

    Exp   go to state 100
    Args  go to state 101


State 74

   50 Exp: Exp . ASSIGNOP Exp
   51    | Exp . AND Exp
   52    | Exp . OR Exp
   53    | Exp . RELOP Exp
   54    | Exp . PLUS Exp
   55    | Exp . MINUS Exp
   56    | Exp . STAR Exp
   57    | Exp . DIV Exp
   59    | MINUS Exp .
   63    | Exp . LB Exp RB
   64    | Exp . DOT ID
   71    | Exp . LB Exp error RB

    STAR  shift, and go to state 89
    DIV   shift, and go to state 90
    DOT   shift, and go to state 93
    LB    shift, and go to state 94

    $default  reduce using rule 59 (Exp)


State 75

   50 Exp: Exp . ASSIGNOP Exp
   51    | Exp . AND Exp
   52    | Exp . OR Exp
   53    | Exp . RELOP Exp
   54    | Exp . PLUS Exp
   55    | Exp . MINUS Exp
   56    | Exp . STAR Exp
   57    | Exp . DIV Exp
   60    | NOT Exp .
   63    | Exp . LB Exp RB
   64    | Exp . DOT ID
   71    | Exp . LB Exp error RB

    DOT  shift, and go to state 93
    LB   shift, and go to state 94

    $default  reduce using rule 60 (Exp)


State 76

   50 Exp: Exp . ASSIGNOP Exp
   51    | Exp . AND Exp
   52    | Exp . OR Exp
   53    | Exp . RELOP Exp
   54    | Exp . PLUS Exp
   55    | Exp . MINUS Exp
   56    | Exp . STAR Exp
   57    | Exp . DIV Exp
   58    | LP Exp . RP
   63    | Exp . LB Exp RB
   64    | Exp . DOT ID
   68    | LP Exp . error RP
   71    | Exp . LB Exp error RB

    error     shift, and go to state 102
    ASSIGNOP  shift, and go to state 85
    RELOP     shift, and go to state 86
    PLUS      shift, and go to state 87
    MINUS     shift, and go to state 88
    STAR      shift, and go to state 89
    DIV       shift, and go to state 90
    AND       shift, and go to state 91
    OR        shift, and go to state 92
    DOT       shift, and go to state 93
    RP        shift, and go to state 103
    LB        shift, and go to state 94


State 77

   34 Stmt: RETURN Exp . SEMI
   39     | RETURN Exp . error SEMI
   50 Exp: Exp . ASSIGNOP Exp
   51    | Exp . AND Exp
   52    | Exp . OR Exp
   53    | Exp . RELOP Exp
   54    | Exp . PLUS Exp
   55    | Exp . MINUS Exp
   56    | Exp . STAR Exp
   57    | Exp . DIV Exp
   63    | Exp . LB Exp RB
   64    | Exp . DOT ID
   71    | Exp . LB Exp error RB

    error     shift, and go to state 104
    SEMI      shift, and go to state 105
    ASSIGNOP  shift, and go to state 85
    RELOP     shift, and go to state 86
    PLUS      shift, and go to state 87
    MINUS     shift, and go to state 88
    STAR      shift, and go to state 89
    DIV       shift, and go to state 90
    AND       shift, and go to state 91
    OR        shift, and go to state 92
    DOT       shift, and go to state 93
    LB        shift, and go to state 94


State 78

   35 Stmt: IF LP . Exp RP Stmt
   36     | IF LP . Exp RP Stmt ELSE Stmt
   40     | IF LP . Exp error RP Stmt

    INT    shift, and go to state 52
    FLOAT  shift, and go to state 53
    ID     shift, and go to state 54
    MINUS  shift, and go to state 55
    NOT    shift, and go to state 56
    LP     shift, and go to state 57

    Exp  go to state 106


State 79

   37 Stmt: WHILE LP . Exp RP Stmt
   41     | WHILE LP . Exp error RP Stmt

    INT    shift, and go to state 52
    FLOAT  shift, and go to state 53
    ID     shift, and go to state 54
    MINUS  shift, and go to state 55
    NOT    shift, and go to state 56
    LP     shift, and go to state 57

    Exp  go to state 107


State 80

   29 CompSt: LC DefList StmtList error . RC

    RC  shift, and go to state 108


State 81

   28 CompSt: LC DefList StmtList RC .

    $default  reduce using rule 28 (CompSt)


State 82

   30 StmtList: Stmt StmtList .

    $default  reduce using rule 30 (StmtList)


State 83

   38 Stmt: Exp error . SEMI

    SEMI  shift, and go to state 109


State 84

   32 Stmt: Exp SEMI .

    $default  reduce using rule 32 (Stmt)


State 85

   50 Exp: Exp ASSIGNOP . Exp

    INT    shift, and go to state 52
    FLOAT  shift, and go to state 53
    ID     shift, and go to state 54
    MINUS  shift, and go to state 55
    NOT    shift, and go to state 56
    LP     shift, and go to state 57

    Exp  go to state 110


State 86

   53 Exp: Exp RELOP . Exp

    INT    shift, and go to state 52
    FLOAT  shift, and go to state 53
    ID     shift, and go to state 54
    MINUS  shift, and go to state 55
    NOT    shift, and go to state 56
    LP     shift, and go to state 57

    Exp  go to state 111


State 87

   54 Exp: Exp PLUS . Exp

    INT    shift, and go to state 52
    FLOAT  shift, and go to state 53
    ID     shift, and go to state 54
    MINUS  shift, and go to state 55
    NOT    shift, and go to state 56
    LP     shift, and go to state 57

    Exp  go to state 112


State 88

   55 Exp: Exp MINUS . Exp

    INT    shift, and go to state 52
    FLOAT  shift, and go to state 53
    ID     shift, and go to state 54
    MINUS  shift, and go to state 55
    NOT    shift, and go to state 56
    LP     shift, and go to state 57

    Exp  go to state 113


State 89

   56 Exp: Exp STAR . Exp

    INT    shift, and go to state 52
    FLOAT  shift, and go to state 53
    ID     shift, and go to state 54
    MINUS  shift, and go to state 55
    NOT    shift, and go to state 56
    LP     shift, and go to state 57

    Exp  go to state 114


State 90

   57 Exp: Exp DIV . Exp

    INT    shift, and go to state 52
    FLOAT  shift, and go to state 53
    ID     shift, and go to state 54
    MINUS  shift, and go to state 55
    NOT    shift, and go to state 56
    LP     shift, and go to state 57

    Exp  go to state 115


State 91

   51 Exp: Exp AND . Exp

    INT    shift, and go to state 52
    FLOAT  shift, and go to state 53
    ID     shift, and go to state 54
    MINUS  shift, and go to state 55
    NOT    shift, and go to state 56
    LP     shift, and go to state 57

    Exp  go to state 116


State 92

   52 Exp: Exp OR . Exp

    INT    shift, and go to state 52
    FLOAT  shift, and go to state 53
    ID     shift, and go to state 54
    MINUS  shift, and go to state 55
    NOT    shift, and go to state 56
    LP     shift, and go to state 57

    Exp  go to state 117


State 93

   64 Exp: Exp DOT . ID

    ID  shift, and go to state 118


State 94

   63 Exp: Exp LB . Exp RB
   71    | Exp LB . Exp error RB
